# pc6001-protocart

./: .gitignore  LICENSE  PC6001 Cart Protoboard.kicad_pcb  PC6001 Cart Protoboard.kicad_prl  PC6001 Cart Protoboard.kicad_pro  PC6001 Cart Protoboard.kicad_sch  PC6001 Cart Protoboard.pro  PC6001 Cart Protoboard.sch  Parametric PC-6001 cartridge-bottom.stl  Parametric PC-6001 cartridge-top.stl  Parametric PC-6001 cartridge.scad  README.md  UltimatePico.bak  decody.py  fp-lib-table  measurements.txt  sym-lib-table
74lvc245an/: 74lvc245an.bak  74lvc245an.kicad_sym
PC6001 Edge Connector.pretty/: PC6001 Cartridge Connector.kicad_mod
Protoboard.pretty/: Holes_25.kicad_mod  Holes_50.kicad_mod  Proto_1.kicad_mod  Proto_1_Odd.kicad_mod  Proto_25.kicad_mod  Proto_50.kicad_mod  Strip_25.kicad_mod  Strip_25_vert.kicad_mod  Strip_50.kicad_mod
UltimatePico.pretty/: UltimatePico.kicad_mod
firmware/: .gitignore  CMakeLists.txt  README.md  headerize.py  main.c  masks.html  p6_bootrom.h  p6_cart.c  p6_cart.h
